# DCC030-TT-twitch-scraper

./: .gitignore  README.md  pyproject.toml
src/twitch_scraper/: count.py  crawl_second_level.py  main.py  test.py  test2.py
src/twitch_scraper/integrity/: token.py
src/twitch_scraper/scraper/: headers.py  scraper.py  video_list.py
