[tool.poetry]
name = "twitch-scraper"
version = "0.1.0"
description = ""
authors = ["Vitor Rodarte <vitor@alude.com.br>"]
readme = "README.md"
packages = [{include = "twitch_scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium-wire = "^5.1.0"
requests = "^2.31.0"
undetected-chromedriver = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
